add login and register endpoints

--- a/Backend/Auth/package.json
+++ b/Backend/Auth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"index",
     "test": "mocha",
     "dev": "nodemon index.js"
   },
