--- a/Backend/Auth/package.json
+++ b/Backend/Auth/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
-    "sequelize": "^4.44.3"
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.6.0"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
