Refactor folder structure diff --git a/Backend/Auth/controllers/index.controller.js b/Backend/Auth/controllers/index.controller.js deleted file mode 100644 index 8538bae..0000000 --- a/Backend/Auth/controllers/index.controller.js +++ /dev/null @@ -1,23 +0,0 @@ -//conexion con postgres - -const {Pool} = require("pg"); -new Pool({ - -}) - - -const login = (req, res)=>{ -    res.send('Sing in'); -}; - -const register = (req, res)=>{ -    res.send('Sing up'); -}; - - - - -module.exports = { -    login, -    register -} \ No newline at end of file diff --git a/Backend/Auth/controllers/pet.controller.js b/Backend/Auth/controllers/pet.controller.js deleted file mode 100644 index 2c08dbe..0000000 --- a/Backend/Auth/controllers/pet.controller.js +++ /dev/null @@ -1,18 +0,0 @@ -import PetModel from '../models/Pet'; -import {createAPet} from '../services/pets'; - -export const create = async (req, res) => { -  let newPet; -  try { -    newPet = createAPet(req); -  } catch (e) { -    return res.sendStatus(404); -  } - -  try { -    PetModel.create(newPet); -    res.sendStatus(201); -  } catch (e) { -    return res.sendStatus(505); -  } -}; diff --git a/Backend/Auth/database/database.sql b/Backend/Auth/database/database.sql deleted file mode 100644 index 05b582a..0000000 --- a/Backend/Auth/database/database.sql +++ /dev/null @@ -1,10 +0,0 @@ -CREATE DATABASE adopets; - -CREATE TABLE users ( -    id SERIAL PRIMARY KEY, -    name VARCHAR(40), -    lastname VARCHAR(50), -    email TEXT -); - --- //sudo -u postgres psql diff --git a/Backend/Auth/index.js b/Backend/Auth/index.js deleted file mode 100644 index 75cfa05..0000000 --- a/Backend/Auth/index.js +++ /dev/null @@ -1,19 +0,0 @@ -const express = require('express'); -const {readENV} = require('./global/enviroment'); -const app = express(); -const port = 3000; - -// initialize env vars -readENV(); - -// middleware -app.use(express.json()); -app.use(express.urlencoded({extended: false})); -// router configuration -app.use(require('

--- a/Backend/Auth/package.json
+++ b/Backend/Auth/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "index",
+    "start": "nodemon src/api/index.js",
     "test": "mocha --timeout 5000",
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/api/index.js"
   },
   "author": "",
   "license": "ISC",
