--- a/Backend/Auth/package.json
+++ b/Backend/Auth/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "rewire": "^5.0.0",
     "sequelize": "^6.6.0",
     "validator": "^13.6.0"
   },
